<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/entry_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_layout_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/entry_text"
            style="@style/EntryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/entry_tags"
            style="@style/EntryTagsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_tags"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_text" />

        <TextView
            android:id="@+id/entry_date"
            style="@style/EntryDateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_tags" />

        <ImageView
            android:id="@+id/icon_delete"
            android:src="@drawable/ic__delete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toTopOf="@+id/entry_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/IconDeleteStyle" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:text="@string/update"
        app:layout_constraintStart_toStartOf="@+id/entry_layout"
        app:layout_constraintTop_toBottomOf="@+id/entry_layout"
        style="@style/ButtonUpdateStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>