<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".updateentry.UpdateEntryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/entry_update_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_entry_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/AppNameStyle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/entry_update_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_layout_entry"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_update_title">

            <EditText
                android:id="@+id/edit_entry_update_text"
                style="@style/EntryCreateStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_entry_update_tags"
                style="@style/EntryCreateStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/entry_tags"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_entry_update_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_update_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>